// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalCard matches snapshot for state Active 1`] = `
<a
  className="block bg-white border border-gray-200 rounded-xl p-6 hover:border-indigo-300 hover:shadow-sm transition-all"
  href="/proposal/1"
>
  <div
    className="flex items-start justify-between"
  >
    <div
      className="flex-1 min-w-0"
    >
      <p
        className="text-xs text-gray-400 mb-1"
      >
        Proposal #
        1
      </p>
      <h2
        className="text-lg font-semibold text-gray-900 truncate"
      >
        Transfer 1000 NEB to treasury
      </h2>
      <div
        className="mt-3 flex items-center gap-4 text-sm text-gray-500"
      >
        <span>
          For: 
          750
        </span>
        <span>
          Against: 
          250
        </span>
      </div>
    </div>
    <span
      className="px-3 py-1 rounded-full text-xs font-medium bg-blue-100 text-blue-800"
    >
      Active
    </span>
  </div>
</a>
`;

exports[`ProposalCard matches snapshot for state Cancelled 1`] = `
<a
  className="block bg-white border border-gray-200 rounded-xl p-6 hover:border-indigo-300 hover:shadow-sm transition-all"
  href="/proposal/1"
>
  <div
    className="flex items-start justify-between"
  >
    <div
      className="flex-1 min-w-0"
    >
      <p
        className="text-xs text-gray-400 mb-1"
      >
        Proposal #
        1
      </p>
      <h2
        className="text-lg font-semibold text-gray-900 truncate"
      >
        Transfer 1000 NEB to treasury
      </h2>
      <div
        className="mt-3 flex items-center gap-4 text-sm text-gray-500"
      >
        <span>
          For: 
          750
        </span>
        <span>
          Against: 
          250
        </span>
      </div>
    </div>
    <span
      className="px-3 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-500"
    >
      Cancelled
    </span>
  </div>
</a>
`;

exports[`ProposalCard matches snapshot for state Defeated 1`] = `
<a
  className="block bg-white border border-gray-200 rounded-xl p-6 hover:border-indigo-300 hover:shadow-sm transition-all"
  href="/proposal/1"
>
  <div
    className="flex items-start justify-between"
  >
    <div
      className="flex-1 min-w-0"
    >
      <p
        className="text-xs text-gray-400 mb-1"
      >
        Proposal #
        1
      </p>
      <h2
        className="text-lg font-semibold text-gray-900 truncate"
      >
        Transfer 1000 NEB to treasury
      </h2>
      <div
        className="mt-3 flex items-center gap-4 text-sm text-gray-500"
      >
        <span>
          For: 
          750
        </span>
        <span>
          Against: 
          250
        </span>
      </div>
    </div>
    <span
      className="px-3 py-1 rounded-full text-xs font-medium bg-red-100 text-red-800"
    >
      Defeated
    </span>
  </div>
</a>
`;

exports[`ProposalCard matches snapshot for state Executed 1`] = `
<a
  className="block bg-white border border-gray-200 rounded-xl p-6 hover:border-indigo-300 hover:shadow-sm transition-all"
  href="/proposal/1"
>
  <div
    className="flex items-start justify-between"
  >
    <div
      className="flex-1 min-w-0"
    >
      <p
        className="text-xs text-gray-400 mb-1"
      >
        Proposal #
        1
      </p>
      <h2
        className="text-lg font-semibold text-gray-900 truncate"
      >
        Transfer 1000 NEB to treasury
      </h2>
      <div
        className="mt-3 flex items-center gap-4 text-sm text-gray-500"
      >
        <span>
          For: 
          750
        </span>
        <span>
          Against: 
          250
        </span>
      </div>
    </div>
    <span
      className="px-3 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-800"
    >
      Executed
    </span>
  </div>
</a>
`;

exports[`ProposalCard matches snapshot for state Pending 1`] = `
<a
  className="block bg-white border border-gray-200 rounded-xl p-6 hover:border-indigo-300 hover:shadow-sm transition-all"
  href="/proposal/1"
>
  <div
    className="flex items-start justify-between"
  >
    <div
      className="flex-1 min-w-0"
    >
      <p
        className="text-xs text-gray-400 mb-1"
      >
        Proposal #
        1
      </p>
      <h2
        className="text-lg font-semibold text-gray-900 truncate"
      >
        Transfer 1000 NEB to treasury
      </h2>
      <div
        className="mt-3 flex items-center gap-4 text-sm text-gray-500"
      >
        <span>
          For: 
          750
        </span>
        <span>
          Against: 
          250
        </span>
      </div>
    </div>
    <span
      className="px-3 py-1 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800"
    >
      Pending
    </span>
  </div>
</a>
`;

exports[`ProposalCard matches snapshot for state Queued 1`] = `
<a
  className="block bg-white border border-gray-200 rounded-xl p-6 hover:border-indigo-300 hover:shadow-sm transition-all"
  href="/proposal/1"
>
  <div
    className="flex items-start justify-between"
  >
    <div
      className="flex-1 min-w-0"
    >
      <p
        className="text-xs text-gray-400 mb-1"
      >
        Proposal #
        1
      </p>
      <h2
        className="text-lg font-semibold text-gray-900 truncate"
      >
        Transfer 1000 NEB to treasury
      </h2>
      <div
        className="mt-3 flex items-center gap-4 text-sm text-gray-500"
      >
        <span>
          For: 
          750
        </span>
        <span>
          Against: 
          250
        </span>
      </div>
    </div>
    <span
      className="px-3 py-1 rounded-full text-xs font-medium bg-purple-100 text-purple-800"
    >
      Queued
    </span>
  </div>
</a>
`;

exports[`ProposalCard matches snapshot for state Succeeded 1`] = `
<a
  className="block bg-white border border-gray-200 rounded-xl p-6 hover:border-indigo-300 hover:shadow-sm transition-all"
  href="/proposal/1"
>
  <div
    className="flex items-start justify-between"
  >
    <div
      className="flex-1 min-w-0"
    >
      <p
        className="text-xs text-gray-400 mb-1"
      >
        Proposal #
        1
      </p>
      <h2
        className="text-lg font-semibold text-gray-900 truncate"
      >
        Transfer 1000 NEB to treasury
      </h2>
      <div
        className="mt-3 flex items-center gap-4 text-sm text-gray-500"
      >
        <span>
          For: 
          750
        </span>
        <span>
          Against: 
          250
        </span>
      </div>
    </div>
    <span
      className="px-3 py-1 rounded-full text-xs font-medium bg-green-100 text-green-800"
    >
      Succeeded
    </span>
  </div>
</a>
`;

exports[`ProposalCard matches snapshot with long description 1`] = `
<a
  className="block bg-white border border-gray-200 rounded-xl p-6 hover:border-indigo-300 hover:shadow-sm transition-all"
  href="/proposal/1"
>
  <div
    className="flex items-start justify-between"
  >
    <div
      className="flex-1 min-w-0"
    >
      <p
        className="text-xs text-gray-400 mb-1"
      >
        Proposal #
        1
      </p>
      <h2
        className="text-lg font-semibold text-gray-900 truncate"
      >
        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
      </h2>
      <div
        className="mt-3 flex items-center gap-4 text-sm text-gray-500"
      >
        <span>
          For: 
          750
        </span>
        <span>
          Against: 
          250
        </span>
      </div>
    </div>
    <span
      className="px-3 py-1 rounded-full text-xs font-medium bg-blue-100 text-blue-800"
    >
      Active
    </span>
  </div>
</a>
`;
